# panw-gcs-northstar

./: .env.example  .gitignore  README.md  dashboard.py  pyproject.toml  requirements.txt
dashboard/: dashboard.py
data/: account_health.csv  accounts.csv  contracts.csv  csm_rep.csv
data_generation/: generate_dataset.py
dbhagatsubmit/data_generation/: requirements.txt
dbhagatsubmit/pipeline/: dq.py
dbhagatsubmit/pipeline_and_tests/pipeline/: run_pipeline.py  setup_tables.py
dbhagatsubmit/presentation/: GCSARR_DBFinalv1.pptx
dbhagatsubmit/specs/: BRD_v3.md  phase2_execution_guide.md  prd.md
dbhagatsubmit/sql/: 00_setup_tables.sql  03_csm_monthly_summary.sql  04_portfolio_summary.sql
dbhagatsubmit/tests/: test_edge_cases.py
discoverydocs/: BRD_v2.md  brd.docx  dq_report_v2.csv  realized_arr_pipeline_v2.py  realized_arr_portfolio_v2.json  realized_arr_v2.csv
pipeline/: config.py
pipeline_and_tests/tests/: conftest.py  test_dq.py  test_integration.py  test_results.txt
presentation/: PANW_GCS_RealizedARR_FinalDeck.pptx
specs/: BRD.md  GCS_PostSales_AI_Vision_Whitepaper.md  Realized_ARR_Spec_v2.md  claude_code_prompts.md  sys_arch.md  test_spec.md
sql/: 01_dq_preprocessing.sql  02_realized_arr_monthly.sql
tests/: test_invariants.py
