[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "panw-gcs-northstar"
version = "0.1.0"
requires-python = ">=3.14"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]
